--- a/src/pages/inicio/inicio.html
+++ b/src/pages/inicio/inicio.html
@@ -17,9 +17,12 @@
 
 
 <ion-content padding>
-<h2>Hola ionic 2</h2>
-<p>Loremd asd asd asd as das das da d a da das d asdd ad qwf wee fd w qwd  qd</p>
-
-<button ion-button>Default</button>
+	<ion-grid>
+		<ion-row>
+			<img class="centrado" src="/assets/imgs/logo2.jpg">
+		<h1>TecnoAndina</h1>
+		<p align="justify">En Tecnoandina desarrollamos aplicaciones y  dispositivos electrónicos para conectar con tus equipos, digitalizamos tus procesos, los conectamos con tus sistemas - ERP, plataformas de control y otros softwares - y te entregamos una solución para que puedas darle una nueva dimensión a tu negocio. Por esto Tecnoandina es mucho más que tecnología</p>
+		</ion-row>
+	</ion-grid>
 
 </ion-content>
