--- a/src/pages/anadir/anadir.html
+++ b/src/pages/anadir/anadir.html
@@ -14,52 +14,49 @@
 </ion-header>
 
 <ion-content padding>
-	<form>
+	<form (submit)="addEmpleado()">
 		<ion-list>
 			<ion-item>
     			<ion-label floating>Nombre</ion-label>
-    			<ion-input type="text"></ion-input>
+    			<ion-input name="nombre" type="text" [(ngModel)]="newEmpleado.nombre"></ion-input>
   			</ion-item>
-
 	  		<ion-item>
 			    <ion-label floating>Apellido</ion-label>
-			    <ion-input type="text"></ion-input>
+			    <ion-input name="apellido" type="text" [(ngModel)]="newEmpleado.apellido"></ion-input>
 			</ion-item>
-
 			<ion-item>
 			    <ion-label floating>RUN</ion-label>
-			    <ion-input type="text"></ion-input>
+			    <ion-input name="run" type="text" [(ngModel)]="newEmpleado.run"></ion-input>
 			</ion-item>
 		</ion-list>
-		
 		<ion-list>
   			<ion-item>
     			<ion-label>Genero</ion-label>
-    			<ion-select>
-      				<ion-option value="nes">Masculino</ion-option>
-      				<ion-option value="n64">Femenino</ion-option>
+    			<ion-select name="genero" [(ngModel)]="newEmpleado.genero">
+      				<ion-option value="Masculino">Masculino</ion-option>
+      				<ion-option value="Femenino">Femenino</ion-option>
     			</ion-select>
   			</ion-item>
 		</ion-list>
+		<ion-list>
 		<ion-item>
 		    <ion-label>Fecha de ingreso</ion-label>
-		    <ion-datetime displayFormat="MMM DD YYYY"></ion-datetime>
+		    <ion-datetime name="fecha" displayFormat="MMM DD YYYY" [(ngModel)]="newEmpleado.fecha"></ion-datetime>
 		</ion-item>
 		<ion-item>
 			<ion-label floating>Direccion</ion-label>
-			<ion-textarea name="direccion"></ion-textarea>
+			<ion-textarea name="direccion" [(ngModel)]="newEmpleado.direccion"></ion-textarea>
 		</ion-item>
 		<ion-item>
 			<ion-label>No soy un robot</ion-label>
-			<ion-checkbox required></ion-checkbox>
+			<ion-checkbox name="confirmacion" required [(ngModel)]="newEmpleado.confirmacion"></ion-checkbox>
 		</ion-item>
 
-		<button ion-button type="submit" icon-left>
+		</ion-list>
+		<button ion-button type="submit" icon-left (click)="showAlert()">
 			<ion-icon name="add"></ion-icon>
 			Guardar
 		</button>
-
-
 	</form>
 
 </ion-content>
